--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^6.0.2
   cupertino_icons: ^1.0.8
   equatable: ^2.0.7
   firebase_auth: ^6.1.0
@@ -35,6 +36,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  flutter_facebook_auth: ^7.1.2
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
