--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+## <<<<<<< Updated upstream
   flutter_dotenv: ^6.0.0
   google_generative_ai: ^0.4.7
   smooth_page_indicator: ^1.2.1
@@ -40,6 +41,21 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+## =======
+  smooth_page_indicator: ^1.2.1
+
+dev_dependencies:
+
+  # The "flutter_lints" package below contains a set of recommended lints to
+  # encourage good coding practices. The lint set provided by the package is
+  # activated in the `analysis_options.yaml` file located at the root of your
+  # package. See that file for information about deactivating specific lint
+  # rules and activating additional ones.
+  flutter_lints: ^5.0.0
+  flutter_test:
+    sdk: flutter
+
+## >>>>>>> Stashed changes
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
@@ -53,7 +69,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+## <<<<<<< Updated upstream
     - .env
+## =======
+## >>>>>>> Stashed changes
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
