--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,18 +42,8 @@ dev_dependencies:
     sdk: flutter
 
 ## =======
-  smooth_page_indicator: ^1.2.1
+  
 
-dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^5.0.0
-  flutter_test:
-    sdk: flutter
 
 ## >>>>>>> Stashed changes
 # For information on the generic Dart part of this file, see the
@@ -83,10 +73,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
