--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
-  flutter_facebook_auth: ^7.1.2
-  google_sign_in: ^6.2.1
   flutter_dotenv: ^6.0.0
+  flutter_facebook_auth: ^7.1.2
   google_generative_ai: ^0.4.7
+  google_sign_in: ^6.2.1
+  shared_preferences: ^2.5.3
   smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
