--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   cloud_firestore: ^6.0.3
   cupertino_icons: ^1.0.8
+  equatable: ^2.0.7
   firebase_auth: ^6.1.1
   firebase_core: ^4.2.0
   flutter:
