--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_core: ^4.2.0
   firebase_auth: ^6.1.1
   cloud_firestore: ^6.0.3
+  firebase_storage: ^13.0.3
 
   # State Management & Utils
   flutter_bloc: ^9.1.1
@@ -27,6 +28,11 @@ dependencies:
   flutter_facebook_auth: ^7.1.2
   google_sign_in: ^6.2.1
   google_generative_ai: ^0.4.7
+
+  # Image & Date
+  image_picker: ^1.1.2
+  intl: ^0.19.0
+  cloudinary_public: ^0.21.0
 
   # UI
   cupertino_icons: ^1.0.8
