--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   cached_network_image: ^3.4.1
   cloud_firestore: ^6.0.3
+  cloudinary_public: ^0.23.1
   cupertino_icons: ^1.0.8
   equatable: ^2.0.7
   firebase_auth: ^6.1.1
@@ -21,6 +22,8 @@ dependencies:
   flutter_facebook_auth: ^7.1.2
   google_generative_ai: ^0.4.7
   google_sign_in: ^6.2.1
+  image_picker: ^1.2.0
+  intl: ^0.20.2
   share_plus: ^12.0.0
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
