--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
+  app_links: ^6.4.1
   cached_network_image: ^3.4.1
   cloud_firestore: ^6.0.3
   cloudinary_public: ^0.23.1
@@ -22,8 +23,10 @@ dependencies:
   flutter_facebook_auth: ^7.1.2
   google_generative_ai: ^0.4.7
   google_sign_in: ^6.2.1
+  http: ^1.5.0
   image_picker: ^1.2.0
   intl: ^0.20.2
+  path_provider: ^2.1.5
   share_plus: ^12.0.0
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
