--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,13 @@ environment:
 
 dependencies:
   app_links: ^6.4.1
+  bloc_test: ^10.0.0
   cached_network_image: ^3.4.1
   cloud_firestore: ^6.0.3
   cloudinary_public: ^0.23.1
   cupertino_icons: ^1.0.8
   equatable: ^2.0.7
+  fake_cloud_firestore: ^4.0.0
   firebase_auth: ^6.1.1
   firebase_core: ^4.2.0
   flutter:
@@ -26,6 +28,7 @@ dependencies:
   http: ^1.5.0
   image_picker: ^1.2.0
   intl: ^0.20.2
+  mocktail: ^1.0.4
   path_provider: ^2.1.5
   share_plus: ^12.0.0
   shared_preferences: ^2.5.3
@@ -35,6 +38,8 @@ dependencies:
 dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
 flutter:
